--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -23,14 +23,14 @@
 	 "item.kubejs.tungsten_nugget": "Tungsten nugget",
 	 "item.kubejs.platinum_nugget": "Platinum nugget",
 	 "item.kubejs.chromium_nugget": "Chromium nugget",
-	 "item.kubejs.wrought_iron_nugget": "Wrought iron nugget"
-	 "item.kubejs.small_plate_cast": "Small Plate Cast"
-	 "item.kubejs.small_gear_cast": "Small Gear Cast"
-	 "item.kubejs.small_rod_cast": "Small Rod Cast"
-	 "item.kubejs.small_plate_red_sand_cast": "Small Plate Red Sand Cast"
-	 "item.kubejs.small_gear_red_sand_cast": "Small Gear Red Sand Cast"
-	 "item.kubejs.small_rod_red_sand_cast": "Small Rod Red Sand Cast"
-	 "item.kubejs.small_plate_sand_cast": "Small Plate Sand Cast"
-	 "item.kubejs.small_gear_sand_cast": "Small Gear Sand Cast"
+	 "item.kubejs.wrought_iron_nugget": "Wrought iron nugget",
+	 "item.kubejs.small_plate_cast": "Small Plate Cast",
+	 "item.kubejs.small_gear_cast": "Small Gear Cast",
+	 "item.kubejs.small_rod_cast": "Small Rod Cast",
+	 "item.kubejs.small_plate_red_sand_cast": "Small Plate Red Sand Cast",
+	 "item.kubejs.small_gear_red_sand_cast": "Small Gear Red Sand Cast",
+	 "item.kubejs.small_rod_red_sand_cast": "Small Rod Red Sand Cast",
+	 "item.kubejs.small_plate_sand_cast": "Small Plate Sand Cast",
+	 "item.kubejs.small_gear_sand_cast": "Small Gear Sand Cast",
 	 "item.kubejs.small_rod_sand_cast": "Small Rod Sand Cast"
 }
