--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -2,6 +2,8 @@
 	 "item.kubejs.andesite_dust": "Andesite flux",
 	 "item.kubejs.kelp_string": "Kelp string",
 	 "item.kubejs.incomplete_mechanical_crafter": "Incomplete mechanical crafter",
+	 "item.kubejs.incomplete_andesite_tunnel": "Incomplete Andesite Tunnel",
+	 "item.kubejs.incomplete_brass_tunnel": "Incomplete Brass Tunnel",
 	 "item.kubejs.crushed_bismuthinite_ore": "Crushed Bismuthinite",
 	 "item.kubejs.crushed_bertrandite_ore": "Crushed Bertrandite",
 	 "item.kubejs.crushed_cobaltite_ore": "Crushed Cobaltite",
