--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -1,6 +1,8 @@
 {
 	 "item.kubejs.andesite_dust": "Andesite flux",
 	 "item.kubejs.kelp_string": "Kelp string",
+	 "item.kubejs.lime": "Lime",
+	 "item.kubejs.chalk": "Chalk",
 	 "item.kubejs.incomplete_mechanical_crafter": "Incomplete mechanical crafter",
 	 "item.kubejs.crushed_bismuthinite_ore": "Crushed Bismuthinite",
 	 "item.kubejs.crushed_bertrandite_ore": "Crushed Bertrandite",
