--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -3,7 +3,8 @@
 	 "item.kubejs.kelp_string": "Kelp string",
 	 "item.kubejs.lime": "Lime",
 	 "item.kubejs.chalk": "Chalk",
-	 "item.kubejs.incomplete_mechanical_crafter": "Incomplete mechanical crafter",
+	 "item.kubejs.glass_powder": "Glass Powder",
+	 "item.kubejs.raw_glass_powder": "Raw Glass Powder",
 	 "item.kubejs.crushed_bismuthinite_ore": "Crushed Bismuthinite",
 	 "item.kubejs.crushed_bertrandite_ore": "Crushed Bertrandite",
 	 "item.kubejs.crushed_cobaltite_ore": "Crushed Cobaltite",
@@ -39,6 +40,7 @@
 	 "item.kubejs.kelp_cloth": "Kelp Cloth",
 	 "item.kubejs.pine_dust": "Pine Dust",
 	 "item.kubejs.creosote_cloth": "Creosote Cloth",
+	 "block.kubejs.incomplete_mechanical_crafter": "Incomplete mechanical crafter",
 	 "block.kubejs.andesite_machine": "Andesite Machine",
 	 "block.kubejs.brass_machine": "Brass Machine",
 	 "block.kubejs.copper_machine": "Copper Machine",
