--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -40,7 +40,12 @@
 	 "item.kubejs.kelp_cloth": "Kelp Cloth",
 	 "item.kubejs.pine_dust": "Pine Dust",
 	 "item.kubejs.creosote_cloth": "Creosote Cloth",
-	 "block.kubejs.incomplete_mechanical_crafter": "Incomplete mechanical crafter",
+	 "item.kubejs.incomplete_medium_filling_tank": "Incomplete Medium Filling Tank",
+	 "item.kubejs.incomplete_large_filling_tank": "Incomplete Large Filling Tank",
+	 "item.kubejs.incomplete_small_fueling_tank": "Incomplete Small Fueling Tank",
+	 "item.kubejs.incomplete_medium_fueling_tank": "Incomplete Medium Fueling Tank",
+	 "item.kubejs.incomplete_large_fueling_tank": "Incomplete Large Fueling Tank",
+	 "block.kubejs.incomplete_mechanical_crafter": "Incomplete Mechanical Crafter",
 	 "block.kubejs.andesite_machine": "Andesite Machine",
 	 "block.kubejs.brass_machine": "Brass Machine",
 	 "block.kubejs.copper_machine": "Copper Machine",
