--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -45,6 +45,9 @@
 	 "item.kubejs.incomplete_small_fueling_tank": "Incomplete Small Fueling Tank",
 	 "item.kubejs.incomplete_medium_fueling_tank": "Incomplete Medium Fueling Tank",
 	 "item.kubejs.incomplete_large_fueling_tank": "Incomplete Large Fueling Tank",
+	 "item.kubejs.coalcoke": "Coalcoke",
+	 "item.kubejs.ceramicwet": "Ceramicwet",
+	 "item.kubejs.ceramicplate": "Ceramicplate",
 	 "block.kubejs.incomplete_mechanical_crafter": "Incomplete Mechanical Crafter",
 	 "block.kubejs.andesite_machine": "Andesite Machine",
 	 "block.kubejs.brass_machine": "Brass Machine",
